--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+title:              Effect of Interactive Learning Environments on Learning Outcomes in Science Education
+email:              miraah24@gmail.com
+description:        Study on the effect of interactive learning environments on learning outcomes in science education
+author:             Miraah
+baseurl:            ""
+url:                "https://Miraah24.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    
+facebook_username:  
 instagram_username:  
 linkedin_username:
 
