--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Effect of Interactive Learning Environments on Learning Outcomes in Science Education
+title:              Teaching Science with Interactive Methods; What Works?
 email:              miraah24@gmail.com
-description:        Study on the effect of interactive learning environments on learning outcomes in science education
+description:        Effect of interactive learning environments on learning outcomes in science education
 author:             Miraah
 baseurl:            ""
 url:                "https://Miraah24.github.io"
