new posts and updated name

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title:              Teaching Science with Interactive Methods; What Works?
+title:              Effective Interactive Methods for Teaching Science
 email:              miraah24@gmail.com
 description:        Effect of interactive learning environments on learning outcomes in science education
-author:             Miraah
 baseurl:            ""
 url:                "https://Miraah24.github.io"
 
