--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              Effective Interactive Methods for Teaching Science
-email:              miraah24@gmail.com
+email:              
 description:        Effect of interactive learning environments on learning outcomes in science education
 baseurl:            ""
 url:                "https://Miraah24.github.io"
